--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:file:test
+spring.datasource.url=jdbc:hsqldb:file:gift-shop
 spring.datasource.username=SA
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
