--- a/gift-shop.properties
+++ b/gift-shop.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.0
-#Mon Dec 20 19:48:18 SAMT 2021
+#Sat Feb 12 19:05:57 SAMT 2022
 tx_timestamp=175
-modified=no
+modified=yes
 version=2.6.0
