--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:file:gift-shop
-spring.datasource.username=SA
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
+spring.datasource.username=finley
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-jwt.secret.access=supermegasecret
-jwt.secret.refresh=supermegarefreshsecret
