--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:file:test
-spring.datasource.username=SA
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=finley
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
