--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:gift_shop
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.datasource.username=finley
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
