--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#MySQL
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:h2:mem:gift_shop
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+# H2
+#spring.datasource.url=jdbc:h2:mem:gift_shop
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
+
+spring.cloud.stream.bindings.notificationEventSupplier-out-0.destination = notification-events
+spring.cloud.stream.source = notificationEventSupplier
 
 spring.datasource.username=finley
 spring.datasource.password=password
