--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -37,6 +37,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- LOMBOK -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
