--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,11 @@
     </properties>
     <dependencies>
 
+        <!-- RabbitMQ -->
         <dependency>
             <groupId>org.springframework.amqp </groupId>
             <artifactId>spring-rabbit</artifactId>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,12 +49,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
 
+        <!-- KOTLIN -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
