notification service works!!!

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=asd120200@gmail.com
-spring.mail.password=rvktywrqvegicphy
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.myMail.host=smtp.gmail.com
+spring.myMail.port=587
+spring.myMail.username=asd120200@gmail.com
+spring.myMail.password=rvktywrqvegicphy
+spring.myMail.properties.myMail.smtp.auth=true
+spring.myMail.properties.myMail.smtp.starttls.enable=true
+
+server.port= 8081
