--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>catalog-service</artifactId>
+    <artifactId>auth</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -17,16 +17,21 @@
     </properties>
 
     <dependencies>
-
-
-
-        <!-- LOMBOK -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.security.experimental</groupId>
+            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.samara</groupId>
+            <artifactId>catalog-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
