--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -16,4 +16,11 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+    </dependencies>
 </project>
