--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.amqp </groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
         <!--H2 -->
         <!--        <dependency>-->
         <!--            <groupId>com.h2database</groupId>-->
@@ -42,6 +48,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>3.1.1</version>
         </dependency>
 
     </dependencies>
