--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=catalog-service
