--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -36,6 +36,7 @@
             <artifactId>spring-rabbit</artifactId>
         </dependency>
 
+        <!-- EUREKA CLIENT-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
