--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -33,7 +33,6 @@
             <artifactId>spring-rabbit</artifactId>
         </dependency>
 
-
         <!-- LOMBOK -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -47,6 +46,14 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.1.1</version>
         </dependency>
+
+        <!-- MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
+
 
     </dependencies>
 
