--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -54,6 +54,11 @@
             <version>8.0.11</version>
         </dependency>
 
+        <!-- FLYWAY -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
 
     </dependencies>
 
