--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -18,3 +18,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+comments-service:
+  comment-minimum-length: 3
