add table for product images, child category

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    username: finley
+    username: root
     password: password
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
   jpa:
