--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.h2.console.settings.trace=false
 #spring.h2.console.settings.web-allow-others=false
 
-spring.datasource.username=finley
+spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
