--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -2,17 +2,9 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gift_shop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# H2
-#spring.datasource.url=jdbc:h2:mem:gift_shop
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.path=/h2-console
-#spring.h2.console.settings.trace=false
-#spring.h2.console.settings.web-allow-others=false
-
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
