--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ build/
 ### Config files
 
 notification-service/src/main/resources/application.properties
+auth-service/src/main/resources/application.properties
+catalog-service-service/src/main/resources/application.yml
