--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <module>notification-service</module>
         <module>catalog-service</module>
         <module>discovery-server</module>
-        <module>auth</module>
+        <module>auth-service</module>
     </modules>
 
     <parent>
